Project

General

Profile

Actions

Bug #55548

closed

`radosgw-admin user modify --placement-id` crashes without `--storage-class`

Added by Casey Bodley almost 2 years ago. Updated 3 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Community (dev)
Tags:
storageclass backport_processed
Backport:
octopus pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

(gdb) bt
#0  0x00007ffff605688c in __pthread_kill_implementation () from /lib64/libc.so.6
#1  0x00007ffff60096a6 in raise () from /lib64/libc.so.6
#2  0x00007ffff5ff37d3 in abort () from /lib64/libc.so.6
#3  0x0000555555fe22a5 in std::__replacement_assert (__file=__file@entry=0x555556ec42d7 "/usr/include/c++/11/optional", __line=__line@entry=439,
    __function=__function@entry=0x555556ec45a0 "constexpr _Tp& std::_Optional_base_impl<_Tp, _Dp>::_M_get() [with _Tp = std::__cxx11::basic_string<char>; _Dp
= std::_Optional_base<std::__cxx11::basic_string<char>, false, false>]", __condition=__condition@entry=0x555556ec42c1 "this->_M_is_engaged()")
    at /usr/include/c++/11/x86_64-redhat-linux/bits/c++config.h:2660
#4  0x0000555555fe41f5 in std::_Optional_base_impl<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::_Optional_base<std::_
_cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, false, false> >::_M_get (this=<optimized out>) at /usr/include/c++/11/optional:439
#5  0x0000555555fc7969 in std::optional<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >::operator*() & (
    this=0x7fffffffb2a0) at /usr/include/c++/11/optional:931
#6  main (argc=<optimized out>, argv=<optimized out>) at /home/cbodley/ceph/src/rgw/rgw_admin.cc:6176

6176        target_rule.storage_class = *opt_storage_class;
(gdb) list
6171
6172      if (!placement_id.empty() ||
6173          (opt_storage_class && !opt_storage_class->empty())) {
6174        rgw_placement_rule target_rule;
6175        target_rule.name = placement_id;
6176        target_rule.storage_class = *opt_storage_class;
6177        if (!store->valid_placement(target_rule)) {
6178          cerr << "NOTICE: invalid dest placement: " << target_rule.to_str() << std::endl;
6179          return EINVAL;
6180        }

Related issues 3 (0 open3 closed)

Copied to rgw - Backport #55699: octopus: `radosgw-admin user modify --placement-id` crashes without `--storage-class`RejectedActions
Copied to rgw - Backport #55700: quincy: `radosgw-admin user modify --placement-id` crashes without `--storage-class`ResolvedKonstantin ShalyginActions
Copied to rgw - Backport #55701: pacific: `radosgw-admin user modify --placement-id` crashes without `--storage-class`ResolvedKonstantin ShalyginActions
Actions #1

Updated by Casey Bodley almost 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 46152
Actions #2

Updated by Casey Bodley almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #55699: octopus: `radosgw-admin user modify --placement-id` crashes without `--storage-class` added
Actions #4

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #55700: quincy: `radosgw-admin user modify --placement-id` crashes without `--storage-class` added
Actions #5

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #55701: pacific: `radosgw-admin user modify --placement-id` crashes without `--storage-class` added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags changed from storageclass to storageclass backport_processed
Actions #7

Updated by Konstantin Shalygin 3 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Source set to Community (dev)
Actions

Also available in: Atom PDF