radosgw-admin: don't crash on --placement-id without --storage-class

if --storage-class is omitted, avoid dereferencing an empty optional

Fixes: https://tracker.ceph.com/issues/55548

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 91931a38ce280132e270c80822f3f3b2cc0a3bf9)

Conflicts:
  - path: src/rgw/rgw_admin.cc
    comment: resolve minor conflict